Added large, changed window

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -145,6 +145,8 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Large.h" />
+    <ClInclude Include="Medium.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shield.h" />
     <ClInclude Include="Ship.h" />
@@ -156,6 +158,8 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Large.cpp" />
+    <ClCompile Include="Medium.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Ship.cpp" />
     <ClCompile Include="Small.cpp" />
