--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -30,6 +30,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="spaceInvaders.cpp" />
+    <ClCompile Include="Animation.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -59,6 +62,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="Small.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Animation.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
