--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Word.cpp" />
+    <ClCompile Include="UFO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -29,6 +30,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Word.h" />
+    <ClInclude Include="UFO.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
